# haskell-dummy-project2

./: ChangeLog.md  Setup.hs  haskell-dummy-package1.cabal  haskell-dummy-package2.cabal  stack.yaml
src/: DummyPkg.hs
