name:                haskell-dummy-package2
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              Jacob Mitchell
maintainer:          jacob.mitchell@iohk.io
build-type:          Custom
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

custom-setup
  setup-depends: base
               , Cabal >= 2.0 && < 2.1

source-repository head
  type:                git
  location:            git://github.com/jmitchell/haskell-dummy-package2.git

library
  exposed-modules:     DummyPkg
  build-depends:       base >=4.9 && <4.10
  hs-source-dirs:      src
  default-language:    Haskell2010
